* Fixed version to be a string, which was previously a float, which caused problems   for certain locales * Fixed bug #23974. $dbh->column_info now returns empty arrayref upon table not existing.   Much thanks to Tim Bunce for help fixing the probelem in mysql.pm vs. dbdimp.c * Removed #ifdefs for do error (sqlstate being passed as last arg depending on version) * Fixed insertid test to work with auto_increment_increment replication setup. * Patch from Tim Bunce fixing do() not set $dbh->{Statement} attribute,   which prevented DBD::Profile from giving correct results for calls to do() and   causing ShowErrorStatement to possibly report the wrong statement in the error message * Patch from Tim Bunce clearing out the sth attribute cache when switching between result,   sets which prevented the adjustedment of NUM_OF_FIELDS * Cleanup of several unused variables

git-svn-id: https://svn.perl.org/modules/DBD-mysql/trunk@9183 50811bd7-b8ce-0310-adc1-d9db26280581