mysql.xs
@@ -54,12 +54,7 @@ _ListDBs(drh, host=NULL, port=NULL, user=NULL, password=NULL)
       MYSQL_RES* res = mysql_list_dbs(sock, NULL);
       if (!res)
       {
-        do_error(drh, mysql_errno(sock), mysql_error(sock)
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
-                 , mysql_sqlstate(sock));
-#else
-                );
-#endif
+        do_error(drh, mysql_errno(sock), mysql_error(sock), mysql_sqlstate(sock));
       }
       else
       {
@@ -103,12 +98,8 @@ _admin_internal(drh,dbh,command,dbname=NULL,host=NULL,port=NULL,user=NULL,passwo
     sock = mysql_dr_connect(drh, &mysql, NULL, host, port, user,  password, NULL, NULL);
     if (sock == NULL)
     {
-      do_error(drh, mysql_errno(&mysql), mysql_error(&mysql)
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
-               , mysql_sqlstate(&mysql));
-#else
-              );
-#endif
+      do_error(drh, mysql_errno(&mysql), mysql_error(&mysql),
+               mysql_sqlstate(&mysql));
       XSRETURN_NO;
     }
   }
@@ -129,12 +120,7 @@ _admin_internal(drh,dbh,command,dbname=NULL,host=NULL,port=NULL,user=NULL,passwo
     char* buffer = malloc(strlen(dbname)+50);
     if (buffer == NULL)
     {
-      do_error(drh, JW_ERR_MEM, "Out of memory"
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
-               ,NULL);
-#else
-              );
-#endif
+      do_error(drh, JW_ERR_MEM, "Out of memory" ,NULL);
       XSRETURN_NO;
     }
     else
@@ -154,12 +140,7 @@ _admin_internal(drh,dbh,command,dbname=NULL,host=NULL,port=NULL,user=NULL,passwo
     char* buffer = malloc(strlen(dbname)+50);
     if (buffer == NULL)
     {
-      do_error(drh, JW_ERR_MEM, "Out of memory"
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
-               ,NULL);
-#else
-              );
-#endif
+      do_error(drh, JW_ERR_MEM, "Out of memory" ,NULL);
       XSRETURN_NO;
     }
     else
@@ -178,12 +159,7 @@ _admin_internal(drh,dbh,command,dbname=NULL,host=NULL,port=NULL,user=NULL,passwo
   if (retval)
   {
     do_error(SvOK(dbh) ? dbh : drh, mysql_errno(sock),
-             mysql_error(sock)
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
-             ,mysql_sqlstate(sock));
-#else
-            );
-#endif
+             mysql_error(sock) ,mysql_sqlstate(sock));
   }
 
   if (SvOK(dbh))
@@ -232,12 +208,7 @@ _ListDBs(dbh)
        !(res = mysql_list_dbs(&imp_dbh->mysql, NULL))))
 {
   do_error(dbh, mysql_errno(&imp_dbh->mysql),
-           mysql_error(&imp_dbh->mysql)
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
-           ,mysql_sqlstate(&imp_dbh->mysql));
-#else
-          );
-#endif
+           mysql_error(&imp_dbh->mysql), mysql_sqlstate(&imp_dbh->mysql));
 }
 else
 {
@@ -300,6 +271,8 @@ do(dbh, statement, attr=Nullsv, ...)
                   "mysql.xs do() use_server_side_prepare %d\n",
                   use_server_side_prepare);
 
+  hv_store((HV*)SvRV(dbh), "Statement", 9, SvREFCNT_inc(statement), 0);
+
   if (use_server_side_prepare)
   {
     str_ptr= SvPV(statement, slen);
@@ -317,11 +290,7 @@ do(dbh, statement, attr=Nullsv, ...)
       else
       {
         do_error(dbh, mysql_stmt_errno(stmt), mysql_stmt_error(stmt)
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
                  ,mysql_stmt_sqlstate(stmt));
-#else
-                );
-#endif
         retval=-2;
       }
       mysql_stmt_close(stmt);
@@ -613,23 +582,13 @@ dataseek(sth, pos)
       else
       {
         RETVAL = 0;
-        do_error(sth, JW_ERR_NOT_ACTIVE, "Statement not active"
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
-                 ,NULL);
-#else
-                );
-#endif
+        do_error(sth, JW_ERR_NOT_ACTIVE, "Statement not active" ,NULL);
       }
     }
     else
     {
       RETVAL = 0;
-      do_error(sth, JW_ERR_NOT_ACTIVE, "No result set"
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
-               ,NULL);
-#else
-              );
-#endif
+      do_error(sth, JW_ERR_NOT_ACTIVE, "No result set" ,NULL);
     }
   }
   else
@@ -640,12 +599,7 @@ dataseek(sth, pos)
     RETVAL = 1;
   } else {
     RETVAL = 0;
-    do_error(sth, JW_ERR_NOT_ACTIVE, "Statement not active"
-#if MYSQL_VERSION_ID >= SQL_STATE_VERSION
-             ,NULL);
-#else
-            );
-#endif
+    do_error(sth, JW_ERR_NOT_ACTIVE, "Statement not active" ,NULL);
   }
 #if (MYSQL_VERSION_ID >=SERVER_PREPARE_VERSION) 
   }
