t/40listfields.t
@@ -75,14 +75,13 @@ while (Testing()) {
     Test($state or $dbh->column_info(undef,undef,$table,'%'));
 
     #
-    # Bug #23974: column_info does not return error when table does not exist
+    # Bug #23974: "column_info does not return error when table does not exist"
+    # DBI spec specifies that empty ref should be returned, not error 
     #
-    {
-     local $dbh->{PrintError}= 0;
-      Test($state or
-           ($sth= $dbh->column_info(undef,undef,"this_does_not_exist",'%')));
-      Test($sth and $sth->err());
-    }
+    Test($state or
+        ($sth= $dbh->column_info(undef,undef,"this_does_not_exist",'%')));
+
+    Test($sth and ! $sth->err());
 
     Test($state or $sth = $dbh->prepare("SELECT * FROM $table"))
 	   or DbiError($dbh->err, $dbh->errstr);
