t/insertid.t
@@ -7,7 +7,8 @@ use vars qw($test_dsn $test_user $test_password $state);
 require "t/lib.pl";
 
 while (Testing()) {
-  my $dbh;
+  my ($dbh, $sth, $sth2);
+  my $max_id;
   #
   # Connect to the database
   Test($state or
@@ -43,12 +44,18 @@ QUERY
   #
   # Insert another row
   #
-  my $sth;
   Test($state or ($sth = $dbh->prepare($q)));
   Test($state or $sth->execute());
-  Test($state or $sth->{'mysql_insertid'} eq 2);
-  Test($state or $dbh->{'mysql_insertid'} eq 2);
+  Test($state or ($sth2= $dbh->prepare("SELECT max(id) FROM $table"))); 
+  Test($state or $sth2->execute());
+  Test($state or ($max_id= $sth2->fetch()));
+  # IMPORTANT: this will fail if you are using replication with
+  # an offset and auto_increment_increment, where your 
+  # auto_increment values are stepped (ex: 1, 11, 21, ...)
+  Test($state or $sth->{'mysql_insertid'} == $max_id->[0]);
+  Test($state or $dbh->{'mysql_insertid'} == $max_id->[0]);
   Test($state or $sth->finish());
+  Test($state or $sth2->finish());
 
   #
   # Drop the table
